--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.2",
+    "google-trends-api": "^4.3.0",
     "mongoose": "^4.13.1",
     "socket.io": "^2.0.4"
   },
